--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Global */
+
 html {
     scroll-behavior: smooth;
 }
@@ -6,6 +8,22 @@ body {
     margin: 0;
     padding: 0;
     color: white;
+}
+
+main section {
+    padding: 170px 0;
+}
+
+.container {
+    padding: 0 346px;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 1;
 }
 
 h1 {
@@ -109,39 +127,33 @@ img {
     margin-left: 30%;
 }
 
-.service_btn {
-    width: 20%;
-    height: 3vw;
-    font-size: 1.5vw;
-    background-color: lightgreen;
-    cursor: pointer;
-}
+/* Service */
 
-.service_btn:hover {
-    background-color: rgb(0, 221, 0);
-}
-
-
-.second_section {
-    width: 100%;
-    height: 600px;
+.service {
     background-color: rgb(58, 171, 236);
 }
 
-.second_section_img_container {
-    position: relative;
-    top: 10%;
-    left: 10%;
-
+.service .row {
+    margin-bottom: 36px;
 }
 
-.second_section_text_container {
-    position: relative;
-    top: -60%;
-    left: 50%;
+.service img {
+    width: 382px;
+    height: 302px;
 }
 
+.service button {
+    font-size: 1.5vw;
+    background-color: rgb(40, 156, 57);
+    cursor: pointer;
+    color: white;
+    border: none;
+    padding: 6px 10px;
+}
 
+.service button:hover {
+    background-color: rgb(0, 221, 0);
+}
 
 @media (max-width: 800px) {
     .first_section {
