--- a/style.css
+++ b/style.css
@@ -8,10 +8,20 @@ body {
     margin: 0;
     padding: 0;
     color: white;
+    font-family: 'Aldrich', sans-serif;
 }
 
-main section {
-    padding: 170px 0;
+button {
+    font-size: 1.5vw;
+    background-color: rgb(40, 156, 57);
+    cursor: pointer;
+    color: white;
+    border: none;
+    padding: 6px 10px;
+}
+
+header, section {
+    padding: 123px 0; 
 }
 
 .container {
@@ -26,8 +36,42 @@ main section {
     flex: 1;
 }
 
+/* Header */
+
+header {
+    background-image: url('img/background.jpg');
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.img_container {
+    width: 40%;
+}
+
+.logo {
+    width: 160px;
+    height: auto;
+    cursor: pointer;
+}
+
+.link_container {
+    display: flex;
+    align-items: start;
+}
+
+.links {
+    padding-right: 47px;
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+    font-size: 26px;
+}
+
 h1 {
-    font-size: 5vw;
+    font-size: 6vw;
 }
 
 img {
@@ -35,96 +79,8 @@ img {
     height: auto;
 }
 
-.first_section {
-    width: 100%;
-    height: 400px;
-    background-color: blue;
-}
-
-.logo {
-    width: 10%;
-    height: auto;
-    cursor: pointer;
-    position: relative;
-    z-index: 2;
-}
-
-.links {
-    padding: 15px;
-    text-decoration: none;
-    cursor: pointer;
-    color: white;
-    font-size: 2vw;
-}
-
 .links:hover {
     text-decoration: underline;
-}
-
-.img_container {
-    text-align: start;
-    margin-left: 10%;
-    position: absolute;
-    top: 1.5%;
-}
-
-.link_container {
-    width: 100%;
-    height: 10vw;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo2 {
-    width: 35%;
-    height: auto;
-}
-
-.logo2_container {
-    text-align: center;
-    margin-right: 20%;
-}
-
-.creativity_container {
-    text-align: center;
-    height: 1vw;
-}
-
-.creativity_logo2_container {
-    width: 70%;
-    height: 10vw;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 12%;
-    margin-left: 30%;
-}
-
-.text_container {
-    width: 70%;
-    height: 5vw;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    position: absolute;
-    top: 20%;
-    margin-left: 30%;
-    font-size: 2vw;
-}
-
-.button_container {
-    width: 70%;
-    height: 5vw;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    position: absolute;
-    top: 24%;
-    margin-left: 30%;
 }
 
 /* Service */
@@ -142,18 +98,34 @@ img {
     height: 302px;
 }
 
-.service button {
-    font-size: 1.5vw;
-    background-color: rgb(40, 156, 57);
-    cursor: pointer;
-    color: white;
-    border: none;
-    padding: 6px 10px;
-}
-
 .service button:hover {
     background-color: rgb(0, 221, 0);
 }
+
+/* About */
+
+.aboout_section {
+    background-color: #2B3C5B;
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+    padding-left: 200px;
+}
+
+.profil_img {
+    width: 22%;
+    height: auto;
+}
+
+.about_text_container {
+    margin-right: 10px;
+}
+
+.about_text {
+    font-size: 14px;
+}
+
+/* Media */
 
 @media (max-width: 800px) {
     .first_section {
