--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ body {
 }
 
 button {
-    font-size: 1.5vw;
-    background-color: rgb(40, 156, 57);
-    cursor: pointer;
+    width: 140px;
+    height: 35px;
+    background-color: #30A13F;
+    font-family: 'Inter';
+    font-size: 20px;
     color: white;
+    cursor: pointer;
     border: none;
     padding: 6px 10px;
 }
