--- a/style.css
+++ b/style.css
@@ -47,11 +47,15 @@ header, section {
     justify-content: space-between;
 }
 
+.column {
+    flex: 1;
+}
+
 h1, h2 {
     font-family: 'Aldrich', sans-serif;
 }
 
-h2, p {
+h2 {
     margin: 0;
 }
 
@@ -163,25 +167,31 @@ h2 {
 
 /* About */
 
-.aboout_section {
+.about {
     background-color: #2B3C5B;
-    width: 100%;
-    height: 300px;
-    margin-top: 50px;
-    padding-left: 200px;
 }
 
-.profil_img {
-    width: 22%;
-    height: auto;
+.about .row {
+    flex-direction: row;
+    gap: 20px;
 }
 
-.about_text_container {
+.about .column:first-child {
     margin-right: 10px;
 }
 
-.about_text {
-    font-size: 14px;
+.profil_img {
+    width: 195px;
+    height: 220px;
+}
+
+.about .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.about button {
+    margin-top: 135px;
 }
 
 /* Media */
