--- a/style.css
+++ b/style.css
@@ -70,10 +70,6 @@ nav {
     font-size: 26px;
 }
 
-h1 {
-    font-size: 6vw;
-}
-
 img {
     width: 30%;
     height: auto;
@@ -107,14 +103,16 @@ img {
 .aboout_section {
     background-color: #2B3C5B;
     width: 100%;
-    height: 300px;
+    height: 30vw;
     margin-top: 50px;
     padding-left: 200px;
 }
 
 .profil_img {
-    width: 22%;
+    width: 17%;
     height: auto;
+    margin-left: 20px;
+    margin-top: 20px;
 }
 
 .about_text_container {
@@ -123,6 +121,16 @@ img {
 
 .about_text {
     font-size: 14px;
+}
+
+/*Call To Action*/
+.callToAction {
+    background-image: url("img/background.jpg");
+    display: flex;
+    height: 350px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 /* Media */
@@ -136,5 +144,8 @@ img {
 @media (min-width: 1100px) {
     .first_section {
         height: 600px;
+    }
+    .profil_img {
+        width: 10%;
     }
 }
