--- a/style.css
+++ b/style.css
@@ -47,15 +47,11 @@ header, section {
     justify-content: space-between;
 }
 
-.column {
-    flex: 1;
-}
-
 h1, h2 {
     font-family: 'Aldrich', sans-serif;
 }
 
-h2 {
+h2, p {
     margin: 0;
 }
 
@@ -93,14 +89,8 @@ nav {
     font-size: 20px;
 }
 
-<<<<<<< HEAD
-img {
-    width: 30%;
-    height: auto;
-=======
 .links:last-of-type {
     padding-right: 0;
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
 }
 
 .links:hover {
@@ -173,9 +163,8 @@ h2 {
 
 /* About */
 
-.about {
+.aboout_section {
     background-color: #2B3C5B;
-<<<<<<< HEAD
     width: 100%;
     height: 30vw;
     margin-top: 50px;
@@ -187,31 +176,32 @@ h2 {
     height: auto;
     margin-left: 20px;
     margin-top: 20px;
-=======
 }
 
 .about .row {
     flex-direction: row;
     gap: 20px;
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
 }
 
 .about .column:first-child {
     margin-right: 10px;
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+    padding-left: 200px;
 }
 
 .profil_img {
-    width: 195px;
-    height: 220px;
+    width: 22%;
+    height: auto;
 }
 
-.about .wrapper {
-    display: flex;
-    flex-wrap: wrap;
+.about_text_container {
+    margin-right: 10px;
 }
 
-.about button {
-    margin-top: 135px;
+.about_text {
+    font-size: 14px;
 }
 
 /*Call To Action*/
