--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header, section {
 }
 
 .container {
-    width: 860px;
+    width: 970px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -53,6 +53,10 @@ h1, h2 {
 
 h2, p {
     margin: 0;
+}
+
+.column {
+    flex: 1;
 }
 
 /* Header */
@@ -163,37 +167,19 @@ h2 {
 
 /* About */
 
-.aboout_section {
+.about {
     background-color: #2B3C5B;
     width: 100%;
-    height: 30vw;
-    margin-top: 50px;
-    padding-left: 200px;
 }
 
-.profil_img {
-    width: 17%;
+.about img {
+    width: 190px;
     height: auto;
-    margin-left: 20px;
-    margin-top: 20px;
 }
 
 .about .row {
     flex-direction: row;
     gap: 20px;
-}
-
-.about .column:first-child {
-    margin-right: 10px;
-    width: 100%;
-    height: 300px;
-    margin-top: 50px;
-    padding-left: 200px;
-}
-
-.profil_img {
-    width: 22%;
-    height: auto;
 }
 
 .about_text_container {
@@ -204,14 +190,15 @@ h2 {
     font-size: 14px;
 }
 
-/*Call To Action*/
-.callToAction {
+/* Contact */
+.contact {
     background-image: url("img/background.jpg");
+}
+
+.contact .container {
     display: flex;
-    height: 350px;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
 }
 
 /* Media */
