--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header, section {
 }
 
 .container {
-    width: 860px;
+    width: 970px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -47,16 +47,16 @@ header, section {
     justify-content: space-between;
 }
 
-.column {
-    flex: 1;
-}
-
 h1, h2 {
     font-family: 'Aldrich', sans-serif;
 }
 
-h2 {
+h2, p {
     margin: 0;
+}
+
+.column {
+    flex: 1;
 }
 
 /* Header */
@@ -93,14 +93,8 @@ nav {
     font-size: 20px;
 }
 
-<<<<<<< HEAD
-img {
-    width: 30%;
-    height: auto;
-=======
 .links:last-of-type {
     padding-right: 0;
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
 }
 
 .links:hover {
@@ -146,6 +140,7 @@ h2 {
     width: 330px;
     height: 250px;
     margin-right: 90px;
+    border-radius: 5px;
 }
 
 .service .row:first-child {
@@ -175,53 +170,37 @@ h2 {
 
 .about {
     background-color: #2B3C5B;
-<<<<<<< HEAD
     width: 100%;
-    height: 30vw;
-    margin-top: 50px;
-    padding-left: 200px;
 }
 
-.profil_img {
-    width: 17%;
-    height: auto;
-    margin-left: 20px;
-    margin-top: 20px;
-=======
+.about img {
+    width: 190px;
+    height: 190px;
+    border-radius: 5px;
 }
 
 .about .row {
     flex-direction: row;
     gap: 20px;
->>>>>>> 4153f2e05c81a989f7b579f6861769c1526a13f9
 }
 
-.about .column:first-child {
+.about_text_container {
     margin-right: 10px;
 }
 
-.profil_img {
-    width: 195px;
-    height: 220px;
+.about_text {
+    font-size: 14px;
 }
 
-.about .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.about button {
-    margin-top: 135px;
-}
-
-/*Call To Action*/
-.callToAction {
+/* Contact */
+.contact {
     background-image: url("img/background.jpg");
+}
+
+.contact .container {
     display: flex;
-    height: 350px;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
 }
 
 /* Media */
