Change positions of layout elements

--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,8 @@ body {
     font-size: 20px;
 }
 
-header, section {
-    padding: 106px 0; 
-}
-
 .container {
-    width: 970px;
+    width: 860px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -86,10 +82,6 @@ h2 {
     font-size: 36px;
 }
 
-h2, p {
-    margin: 0;
-}
-
 button {
     width: 140px;
     height: 35px;
@@ -111,7 +103,7 @@ button:hover {
 header {
     background-image: url('../img/background.jpg');
     background-attachment: fixed;
-    height: 680px;
+    padding: 100px 0;
 }
 
 nav {
@@ -126,6 +118,10 @@ nav {
     height: auto;
     cursor: pointer;
     user-select: none;
+}
+
+nav ul {
+    margin: 0;
 }
 
 nav ul a {
@@ -165,18 +161,21 @@ h1 + p {
     user-select: none;
 }
 
+.globus-wrapper {
+    display: flex;
+    justify-content: right;
+}
+
 .globus {
-    width: 290px;
-    height: 290px;
-    margin-left: 190px;
+    width: 330px;
+    height: 330px;
 }
 
 /* Service */
 
 .service {
     background-color: rgb(58, 171, 236);
-    height: 820px;
-    padding: auto 0;
+    padding: 130px 0;
 }
 
 .service .container {
@@ -209,6 +208,13 @@ h1 + p {
 .about {
     background-color: #2B3C5B;
     width: 100%;
+    padding: 100px 0;
+}
+
+.about .wrapper {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .about img {
@@ -228,13 +234,33 @@ h1 + p {
 .contact {
     background-image: url("../img/background.jpg");
     background-attachment: fixed;
-    background-position: 0% 270%;
+    background-position: 0% 313%;
+    padding: 90px 0;
 }
 
 .contact .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.contact p:first-child {
+    font-size: 40px;
+    text-align: center;
+    margin: 0 0 18px 0;
+}
+
+.contact p:nth-child(2) {
+    font-size: 65px;
+    font-family: 'Aldrich', sans-serif;
+    text-align: center;
+    margin: 0 0 50px 0;
+}
+
+.contact button {
+    width: 260px;
+    height: 60px;
+    font-size: 30px;
 }
 
 /* Media */
@@ -247,7 +273,7 @@ h1 + p {
 
 @media (min-width: 1100px) {
     header {
-        height: 600px;
+        /* height: 600px; */
     }
     .profil-img {
         width: 10%;
