--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     padding: 0;
     color: white;
     font-family: 'Inter';
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .container {
@@ -24,7 +24,7 @@ body {
 
 section {
     background-color: rgb(58, 171, 236);
-    padding: 70px 0;
+    padding: 50px 0;
 }
 
 .row {
@@ -59,6 +59,7 @@ section {
 
 h1, h2 {
     font-family: 'Aldrich', sans-serif;
+    font-weight: 500;
 }
 
 h2 {
@@ -112,7 +113,7 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    padding-right: 15px;
+    padding-right: 40px;
     margin-bottom: 10px;
 }
 
@@ -143,6 +144,7 @@ nav ul img {
 }
 
 .header-wrapper {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
@@ -157,7 +159,7 @@ h1 {
 h1 + p {
     font-family: 'Inter';
     opacity: 70%;
-    font-size: 40px;
+    font-size: 36px;
     margin: 0;
     user-select: none;
 }
@@ -172,13 +174,13 @@ h1 + p {
     width: 100%;
     max-width: 330px;
     height: auto;
+    opacity: 50%;
 }
 
 /* Service */
 
 .service {
     background-color: rgb(58, 171, 236);
-    padding: 80px 0;
 }
 
 .service .row .col-md-6 {
@@ -198,12 +200,15 @@ h1 + p {
     margin-right: 0;
 }
 
+.service p {
+    text-align: justify;
+}
+
 /* About */
 
 .about {
     background-color: #2B3C5B;
     width: 100%;
-    padding: 80px 0;
 }
 
 .about img {
@@ -214,11 +219,10 @@ h1 + p {
     overflow: hidden;
 }
 
-.about .row {
-    flex-direction: column;
-    gap: 20px;
+.about p {
+    text-align: justify;
 }
-
+    
 /* Contact */
 .contact {
     background: #0097e6;
@@ -293,27 +297,30 @@ h1 + p {
     background-image: url("../img/background.jpg");
     background-attachment: fixed;
     background-position: 0% 313%;
-    padding: 60px 0;
 }
 
 .contact p:first-child {
     font-size: 32px;
-    text-align: center;
     margin: 0 0 18px 0;
 }
 
 .contact p:nth-child(2) {
     font-size: 45px;
     font-family: 'Aldrich', sans-serif;
-    text-align: center;
     margin: 0 0 40px 0;
 }
 
 .contact button {
     width: 100%;
-    max-width: 350px;
+    max-width: 400px;
     height: 60px;
     font-size: 30px;
+}
+
+.contact .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Media Queries */
