--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* Global */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -17,7 +19,8 @@ body {
     font-family: 'Inter';
 }
 
-section, header {
+section,
+header {
     padding: 60px 0;
 }
 
@@ -29,25 +32,66 @@ section, header {
 
 .row {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+}
+
+.row > *:first-child {
+    margin-right: 60px;
+}
+
+.row:first-of-type {
+    margin-bottom: 40px;
+}
+
+.row:last-of-type {
+    margin-bottom: 0;
+}
+
+.col-1 {
+    flex: 1;
+}
+
+.col-2 {
+    flex: 2;
+}
+
+.col-3 {
+    flex: 3;
+}
+
+.col-4 {
+    flex: 4;
+}
+
+.col-5 {
+    flex: 5;
+}
+
+.col-6 {
+    flex: 6;
+}
+
+.col-7 {
+    flex: 7;
+}
+
+.col-8 {
+    flex: 8;
+}
+
+.col-9 {
+    flex: 9;
+}
+
+.col-10 {
+    flex: 10;
+}
+
+.col-11 {
+    flex: 11;
 }
 
 .col-12 {
-    flex: 0 0 100%;
-}
-
-.col-md-6 {
-    flex: 0 0 calc(50% - 20px);
-    margin-bottom: 20px;
-}
-
-.col-md-7 {
-    flex: 0 0 calc(58.3333% - 20px);
-}
-
-.col-md-5 {
-    flex: 0 0 calc(41.6667% - 20px);
+    flex: 12;
 }
 
 .wrapper {
@@ -57,7 +101,9 @@ section, header {
     height: 100%;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Aldrich', sans-serif;
     font-weight: 500;
     text-align: start;
@@ -159,7 +205,7 @@ nav ul img {
     height: 100%;
 }
 
-h1 + p {
+h1+p {
     font-family: 'Inter';
     opacity: 70%;
     font-size: 36px;
@@ -217,26 +263,27 @@ h1 + p {
     border-radius: 5px;
     overflow: hidden;
 }
-    
+
 /* Contact */
 .contact {
     background: #0097e6;
-  }
-  
-  .contact .section-title {
+}
+
+.contact .section-title {
     color: #ffffff;
-  }
-  
-  form {
+}
+
+form {
     flex: 2 0 0;
     padding-right: 96px;
-  }
-  
-  .contact-details {
+}
+
+.contact-details {
     flex: 1 0 0;
-  }
-  
-  input, textarea {
+}
+
+input,
+textarea {
     display: block;
     background: #0097e6;
     border: none;
@@ -245,46 +292,48 @@ h1 + p {
     color: #ffffff;
     margin-bottom: 10px;
     width: 100%;
-  }
-  
-  input::-moz-placeholder, textarea::-moz-placeholder {
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
     color: #ffffff;
     font-family: "Inconsolata", monospace;
-  }
-  
-  input::placeholder, textarea::placeholder {
+}
+
+input::placeholder,
+textarea::placeholder {
     color: #ffffff;
     font-family: "Inconsolata", monospace;
-  }
-  
-  textarea {
+}
+
+textarea {
     height: 120px;
-  }
-  
-  .contact h3 {
+}
+
+.contact h3 {
     color: #ffffff;
     font-size: 20px;
     margin: 20px 0 0 0;
-  }
-  
-  .contact h3:first-of-type {
+}
+
+.contact h3:first-of-type {
     margin: 0;
-  }
-  
-  .contact p {
+}
+
+.contact p {
     color: #ffffff;
-  }
-  
-  .contact button {
+}
+
+.contact button {
     font-family: "Inconsolata", monospace;
     font-size: 16px;
-  }
+}
 
-  .contact-wrapper {
+.contact-wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  } 
+}
 
 /* Contact */
 
@@ -322,7 +371,8 @@ h1 + p {
 
 @media (max-width: 767px) {
 
-    header, section {
+    header,
+    section {
         padding: 48px 0 !important;
     }
 
@@ -343,7 +393,7 @@ h1 + p {
         font-size: calc(100vw / 4.625);
     }
 
-    h1 + p {
+    h1+p {
         font-size: calc(100vw / 14.583);
     }
 
@@ -363,7 +413,8 @@ h1 + p {
         width: 100%;
     }
 
-    .service img, .service p {
+    .service img,
+    .service p {
         width: calc(100vw - 40px);
     }
 
@@ -390,7 +441,7 @@ h1 + p {
         font-size: 80px;
     }
 
-    h1 + p {
+    h1+p {
         font-size: 30px;
     }
 }
